# svp

svp.git/: .gitignore  CMakeLists.txt  README.md
svp.git/doc/: about-protocol.md  develop-process.md  spice-overview.md  svp-arch.md  svp-env.md  svp-plan.md
svp.git/include/: CMakeLists.txt  channel.h  cmd.h  codec.h  cursor_channel.h  display_channel.h  display_worker.h  encoder.h  encoder_global.h  graphic.h  guest_channel.h  host_channel.h  input_channel.h  inqueue.h  list.h  main_channel.h  net_packet.h  outqueue.h  queue.h  queuedef.h  server.h  settings.h  svp.h  svp_server.h  usb_channel.h  vrde.h
svp.git/src/: CMakeLists.txt
svp.git/src/client/: CMakeLists.txt  Channel.cpp  Channel.h  ChannelManager.cpp  ChannelManager.h  Codec.cpp  Codec.h  ConnectDialog.cpp  ConnectDialog.h  ConnectDialog.ui  CursorChannel.cpp  CursorChannel.h  DisplayChannel.cpp  DisplayChannel.h  IDecoder.h  InfoWidget.cpp  InfoWidget.h  InfoWidget.ui  InputChannel.cpp  InputChannel.h  KeyboardThread.cpp  KeyboardThread.h  MainChannel.cpp  MainChannel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Scancode.cpp  Scancode.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SettingsItemDelegate.cpp  SettingsItemDelegate.h  SvpClient.qrc  SvpRecorder.cpp  SvpRecorder.h  SvpRender.cpp  SvpRender.h  SvpSettings.cpp  (+7 more)
svp.git/src/config/: CMakeLists.txt  iniparser.c  settings.c
svp.git/src/decoder/: CMakeLists.txt
svp.git/src/decoder/lz4/: CMakeLists.txt  LZ4Decoder.cpp  LZ4Decoder.h
svp.git/src/encoder/lz4/: CMakeLists.txt  lz4_encoder.c
svp.git/src/gdi/: CMakeLists.txt  GDITypes.cpp  GDITypes.h  GDIUtils.cpp  GDIUtils.h
svp.git/src/guest/: CMakeLists.txt  guest_channel.c
svp.git/src/lz4/: CMakeLists.txt
svp.git/src/server/: CMakeLists.txt  channel.c  cmd.c  codec.c  cursor_channel.c  display_channel.c  display_worker.c  encoder.c  graphic.c  input_channel.c  inqueue.c  main_channel.c  outqueue.c  queue.c  server.c  svp.c  svp_server.c  usb_channel.c  vrde.c
svp.git/src/usb/: CMakeLists.txt  USBDevice.cpp  USBDevice.h  USBMonitor.cpp  USBMonitor.h  USBUtils.cpp  USBUtils.h
svp.git/src/zlog/: CMakeLists.txt
svp.git/test/: CMakeLists.txt
svp.git/test/gtest/: CMakeLists.txt  gtest-all.cc
svp.git/test/guest/: CMakeLists.txt  tst_hostcmd.c  tst_speed.c
svp.git/test/host/: CMakeLists.txt  hostcmd_channel.c  nop_channel.c
svp.git/test/server/: CMakeLists.txt  test_graphic.cpp  test_inqueue.cpp  test_server.cpp  test_settings.cpp  test_vrde.cpp
svp.git/vbox/: ExtPack.xml  Makefile.kmk  VBoxSVP.cpp  VBoxSVPMain.cpp
