cmake_minimum_required(VERSION 2.6)
enable_testing()
set(CMAKE_BUILD_TYPE RelWithDebInfo)
include_directories(${CMAKE_SOURCE_DIR}/include)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
option(BUILD_SVP_SERVER OFF)
option(BUILD_SVP_CLIENT OFF)
set(VBOX_RUNTIME_DIRECTORY CACHE PATH "VirtualBox runtime directory")
set(SVP_PLUGIN_DIRECTORY "${VBOX_RUNTIME_DIRECTORY}/plugins")
add_subdirectory(include)
add_subdirectory(src)
#add_subdirectory(test)
