include_directories(${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(lz4)
if(UNIX)
    add_subdirectory(zlog)
endif()
add_subdirectory(config)
if(BUILD_SVP_SERVER)
    add_subdirectory(server)
    add_subdirectory(encoder)
endif()
if(BUILD_SVP_CLIENT)
    set(CMAKE_INCLUDE_CURRENT_DIR ON)
    set(CMAKE_AUTOMOC ON)
    if(POLICY CMP0020)
	cmake_policy(SET CMP0020 NEW)
    endif()
    find_package(Qt5Widgets)
    find_package(Qt5Network)
    add_definitions(-DBUILD_SVP_CLIENT)
    add_subdirectory(gdi)
    add_subdirectory(usb)
    add_subdirectory(client)
    add_subdirectory(decoder)
endif()
if(WIN32)
    add_subdirectory(guest)
endif()
