set(CMAKE_CXX_FLAGS "-std=gnu++0x")
add_executable(test_vrde test_vrde.cpp)
target_link_libraries(test_vrde gtest_main dl config zlog)
add_executable(test_inqueue test_inqueue.cpp)
target_link_libraries(test_inqueue gtest_main zlog)
add_executable(test_graphic test_graphic.cpp)
target_link_libraries(test_graphic gtest_main dl config zlog)
add_executable(test_server test_server.cpp)
target_link_libraries(test_server gtest_main dl config zlog)
add_executable(test_settings test_settings.cpp)
target_link_libraries(test_settings gtest_main dl config zlog)

add_test(NAME test_vrde COMMAND test_vrde)
add_test(NAME test_inqueue COMMAND test_inqueue)
add_test(NAME test_graphic COMMAND test_graphic)
add_test(NAME test_server COMMAND test_server)
add_test(NAME test_settings COMMAND test_settings)
